# tlc

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  package-lock.json  package.json  rustfmt.toml
.VSCodeCounter/2021-02-23_11-56-03/: details.md  results.csv  results.md  results.txt
.cargo/: config.toml
.github/workflows/: ci.yml
config/: config copy.json  config.json  config_large.json  config_small.json
public/: index.html
src/: App.js  App.tsx  daq.rs  index.tsx  lib.rs  main.rs  postproc.rs  solve.rs  state.rs  util.rs  video.rs
src-tauri/: .gitignore  Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/cache/: default_config copy.json  default_config.json
src-tauri/config/: default.toml  imp_40000_1_up.json
src-tauri/db/: metadata.sqlite3  schema.sql
src-tauri/src/: build.rs  command.rs  commands.rs  config.rs  daq.rs  data.rs  db.rs  error.rs  event.rs  filter.rs  global_state.rs  handler.rs  handlers.rs  interpolation.rs  lib.rs  main.rs  main_loop.rs  old_state.rs  plot.rs  post.rs  post_processing.rs  request.rs  server.rs  setting.rs  solve.rs  state.rs  util.rs  video.rs
src-tauri/src/cal/: colormap.rs  error.rs  io.rs  mod.rs  postprocess.rs  preprocess.rs  solve.rs
src-tauri/src/calculate/: error.rs  io.rs  mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/controller/: mod.rs
src-tauri/src/controller/cfg/: mod.rs
src-tauri/src/controller/data/: daq.rs  filter.rs  interp.rs  mod.rs  plot.rs  solve.rs  video.rs
src-tauri/src/daq/: interp.rs  interpolation.rs  mod.rs  raw.rs
src-tauri/src/data/: mod.rs  video.rs
src-tauri/src/handler/: mod.rs
src-tauri/src/handler/cfg/: mod.rs
src-tauri/src/handler/config/: mod.rs
src-tauri/src/handler/data/: daq.rs  mod.rs  video.rs
src-tauri/src/server/: config.rs  data.rs
src-tauri/src/setting/: mod.rs  sqlite.rs
src-tauri/src/state/: eval_task.rs  execute_task.rs  handle_output.rs  handler.rs  main_loop.rs  mod.rs  outcome_handler.rs  output_handler.rs  reconcile.rs  request_handler.rs  task.rs
src-tauri/src/state/task/: eval.rs  execute.rs  mod.rs  output.rs
src-tauri/src/util/: blocking.rs  duration.rs  log.rs  mod.rs  progress_bar.rs  time.rs  timing.rs
src-tauri/src/video/: decode.rs  filter.rs  frame_reader.rs  mod.rs  pg1.rs  pool.rs  progress_bar.rs  spawn_handle.rs
src-tauri/src/view/: batch.rs  cmd.rs  handle.rs  mod.rs  request.rs
src-tauri/tests/: cal.rs
src-tauri/var/: db.sqlite3
src/calculate/: colormap.rs  error.rs  io.rs  mod.rs  plot.rs  postprocess.rs  preprocess.rs  solve.rs  test.rs
src/components/: Alert.js  Button.js  Canvas.js  Daq.js  DaqLine.js  EchartsLine.js  GreenHistoryLine.js  IconButton.js  Input.js  InterpDistribution.js  InterpImg.js  NuDistribution.js  Popover.js  Regulator.js  SelectFilter.js  SelectInterp.js  SelectIteration.js  Table.js  Tag.js  VideoCanvas.js
src/daq/: interp.rs
src/pages/: BasicSettings.js  SolveSettings.js
src/state/: tests.rs
src/ui/: cmd.rs
src/video/: detect_peak.rs
src/web_socket/: server.rs
testdata/: almost_empty.avi  imp_20000_1.lvm  imp_20000_1.xlsx
tests/: calculate.rs  io.rs  preprocess.rs  server.rs  web_socket.rs
tlc-core/: Cargo.toml
tlc-core/db/: schema.sql
tlc-core/src/: daq.rs  db.rs  lib.rs  main_loop.rs  post_processing.rs  postproc.rs  request.rs  setting.rs  solve.rs  state.rs  tests.rs  util.rs  video.rs
tlc-core/src/daq/: interp.rs  io.rs  raw.rs  read.rs  test.rs
tlc-core/src/setting/: sqlite.rs
tlc-core/src/solve/: tests.rs
tlc-core/src/state/: handle.rs  output_handler.rs  request_handler.rs  task.rs  tests.rs
tlc-core/src/state/task/: eval.rs  execute.rs  output.rs
tlc-core/src/util/: log.rs  progress_bar.rs
tlc-core/src/video/: controller.rs  decode.rs  detect_peak.rs  io.rs  read.rs  read_video.rs  test.rs  tests.rs
tlc-server/: Cargo.toml
tlc-server/src/: handler.rs  main.rs
tlc-util/: Cargo.toml
tlc-util/src/: lib.rs  log.rs
tlc-video/: Cargo.toml
tlc-video/src/: controller.rs  decode.rs  detect_peak.rs  lib.rs  read_video.rs
video/: Cargo.toml
video/src/: controller.rs  decode.rs  detect_peak.rs  lib.rs  read_video.rs
