[workspace]
members = ["tlc-core", "tlc-server"]

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["sync"] }
tracing = "0.1"

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
