[package]
name = "tlc"
version = "0.0.1"
description = "Transient Liquid Crystal Experiment Data Processing"
authors = ["yhj.await@gmail.com"]
license = "MIT"
repository = "https://github/starpact/tlc"
default-run = "tlc"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-channel = "1.9"
base64 = "0.21"
calamine = "0.21"
crossbeam = "0.8"
csv = "1.2"
dwt = "0.5"
eframe = { version = "0.22", default-features = false, features = ["glow"] }
ffmpeg = { version = "6.0", package = "ffmpeg-next" }
image = "0.24"
libm = "0.2"
median = "0.3"
ndarray = { version = "0.15", features = ["rayon", "serde"] }
packed_simd = "0.3.9"
plotters = "0.3"
rayon = "1.7"
rfd = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde-well-known"] }
tokio = { version = "1.32", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "local-time",
] }

[dev-dependencies]
approx = "0.5"
ndarray = { version = "0.15", features = ["approx-0_5"] }
tokio = { version = "1.32", features = ["macros", "time", "rt-multi-thread"] }

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
