[package]
name = "tlc"
version = "0.0.1"
description = "Transient Liquid Crystal Experiment Data Processing"
authors = ["yhj.await@gmail.com"]
license = "MIT"
repository = "https://github/starpact/tlc"
default-run = "tlc"
edition = "2021"

[dependencies]
anyhow = "1.0"
calamine = "0.21"
crossbeam = "0.8"
csv = "1.2"
dwt = "0.5"
eframe = { version = "0.22", default-features = false, features = ["wgpu"] }
egui_extras = "0.22"
ffmpeg = { version = "6.0", package = "ffmpeg-next" }
libm = "0.2"
median = "0.3"
ndarray = { version = "0.15", features = ["rayon", "serde"] }
rayon = "1.7"
rfd = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde-well-known"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "local-time",
] }

[dev-dependencies]
approx = "0.5"
ndarray = { version = "0.15", features = ["approx-0_5"] }

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
