[package]
name = "tlc"
version = "0.1.0"
description = "Transient Liquid Crystal Experiment Data Processing"
authors = ["yhj.await@gmail.com"]
license = "MIT"
repository = "https://github/starpact/tlc"
default-run = "tlc"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["api-all"] }
serde = "1.0"
anyhow = "1.0"
tracing = "0.1"
ndarray = "0.15"
crossbeam = "0.8"
tlc-core = { path = "../tlc-core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
