[package]
name = "tlc"
version = "0.1.0"
description = "Transient Liquid Crystal Experiment Data Processing"
authors = ["yhj.await@gmail.com"]
license = "MIT"
repository = "https://github/starpact/tlc"
default-run = "tlc"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["api-all"] }
ndarray = "0.15"
tlc-core = { path = "../tlc-core" }
salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
