[package]
name = "tlc-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tlc-core = { path = "../tlc-core" }
tokio = { version = "1.28", features = ["rt", "sync"] }
tracing = "0.1"
webbrowser = "0.8.9"
