[package]
name = "tlc-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = "0.6"
serde = { workspace = true }
serde_json = { workspace = true }
tlc-core = { path = "../tlc-core" }
tokio = { workspace = true }
tower-http = { version = "0.4", features = ["trace"] }
tracing = { workspace = true }
webbrowser = "0.8.9"
