[package]
name = "tlc-video"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.23", features = ["sync"] }
base64 = "0.20"
image = "0.24"
ndarray = { version = "0.15", features = ["rayon", "serde", "approx-0_5"] }
ffmpeg = { version = "5.1", package = "ffmpeg-next" }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thread_local = "1.1"
median = "0.3"
crossbeam = "0.8"
dwt = "0.5"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.6"
tlc-util = { path = "../tlc-util" }
